Migrate to Java 21, an LTS version.